--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -56,3 +56,58 @@
     border: none;
     box-shadow: none;
   }
+
+
+// Button checkbox boolean
+
+.stock-checkbox {
+  cursor: pointer;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: 4px solid transparent;
+  background-color: $green;
+  margin-bottom: 0;
+  outline: 0;
+  label {
+    height: 100%;
+    text-decoration: line-through;
+    font-size: 0.7em;
+    }
+}
+.stock-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.checkbox-boolean {
+  -webkit-animation: checkbox-boolean 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+          animation: checkbox-boolean 0.3s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+  label {
+    text-decoration: none;
+  }
+}
+
+@-webkit-keyframes checkbox-boolean {
+  0% {
+    box-shadow: 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray;
+    -webkit-transform: translateX(0) translateY(0);
+            transform: translateX(0) translateY(0);
+  }
+  100% {
+    box-shadow: -1px 1px $dark-gray, -2px 2px $dark-gray, -3px 3px $dark-gray, -4px 4px $dark-gray, -5px 5px $dark-gray, -6px 6px $dark-gray, -7px 7px $dark-gray, -8px 8px $dark-gray;
+    -webkit-transform: translateX(8px) translateY(-8px);
+            transform: translateX(8px) translateY(-8px);
+  }
+}
+@keyframes checkbox-boolean {
+  0% {
+    box-shadow: 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray, 0 0 $dark-gray;
+    -webkit-transform: translateX(0) translateY(0);
+            transform: translateX(0) translateY(0);
+  }
+  100% {
+    box-shadow: -1px 1px $dark-gray, -2px 2px $dark-gray, -3px 3px $dark-gray, -4px 4px $dark-gray, -5px 5px $dark-gray, -6px 6px $dark-gray, -7px 7px $dark-gray, -8px 8px $dark-gray;
+    -webkit-transform: translateX(8px) translateY(-8px);
+            transform: translateX(8px) translateY(-8px);
+  }
+}
