--- a/app/views/ingredients/_formsimple.html.erb
+++ b/app/views/ingredients/_formsimple.html.erb
@@ -1,16 +1,18 @@
 <div class="row add_ingredient">
   <%= simple_form_for([menu, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: menu.id, day_id: day.id, repa_id: repa.id, plat_id: plat.id), method: :post, remote: true) do |f| %>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-6">
     <%= f.input :name, label: false, placeholder: "Ingrédient" %>
     </div>
 
-    <div class="col-xs-12 col-sm-4">
-    <%= f.input :instock, label: "En stock", class: "stock_check" %>
+    <div class="col-xs-4">
+      <label class="stock-checkbox">
+    <%= f.input :instock, label: "EN STOCK", class: "stock_check" %>
+      </label>
     </div>
     <%= f.hidden_field :plat_id, value: plat.id %>
-    <div class="col-xs-12 col-sm-2">
+    <div class="col-xs-2">
     <%= button_tag type: 'submit', class: "submit-buttons" do %>
-        <i class="fas fa-check"></i>
+        <i class="fas fa-plus"></i>
     <% end %>
     </div>
 
