--- a/app/assets/stylesheets/pages/_plat.scss
+++ b/app/assets/stylesheets/pages/_plat.scss
@@ -1,3 +1,5 @@
+
+
 .edit_platname {
   display: flex;
   justify-content: center;
@@ -9,6 +11,7 @@
     box-shadow: none;
     color: $green;
     text-transform: uppercase;
+
   }
   input:focus {
     outline:none;
@@ -17,6 +20,9 @@
     border-bottom: 2px solid white;
 
 }
+  .submit-buttons {
+    padding-top: 1.8em;
+  }
 }
 
 
@@ -44,25 +50,40 @@
     color: white;
     font-size: 0.9em;
   }
-  .form-check {
-    color: white;
-    padding-left: 3px;
-    padding-right: 3px;
-    padding-top: 10%;
-  }
-  .form-check label {
-    padding-left: 3px;
-    font-weight: normal;
-    margin-bottom: 0px;
-  }
-  .form-check-input {
-    width: 1.5em;
-    height: 1.5em;
-    box-shadow: none;
-    background-color: none;
-  }
-  input[type="checkbox"] {
-        margin: 7px 0 0;
 
+}
+
+.platsshow-delete {
+  .fas {
+    color: $green;
+    font-size: 1.5em;
+    padding-top: 3px;
+    margin-top: 1vh;
   }
 }
+
+.platsshow-inglist {
+  ul {
+    padding-inline-start: 0px;
+
+  }
+  .add_ingredient {
+    border: 1px solid $green;
+    background: transparent;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  ::placeholder {
+  color: $dark-gray;
+}
+  input {
+    color: $green;
+    border-bottom: 1px dashed $dark-gray;
+    padding-left: 0px;
+  }
+  #ingredient_ingredienttype {
+    border: 1px solid $dark-gray;
+  }
+}
+
