--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,25 +1,27 @@
 <div class="row add_ingredient">
   <%= simple_form_for([@plat, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id), method: :post, remote: true) do |f| %>
-    <div class="col-xs-12 col-sm-3">
+    <div class="col-xs-6 col-sm-offset-1 col-sm-3">
     <%= f.input :name, label: false, placeholder: "Ingrédient" %>
     </div>
 
 
-      <div class="col-xs-12 col-sm-2">
+      <div class="col-xs-6 col-sm-2">
       <%= f.input :ingredienttype, label: false, placeholder: "Type d'ingrédient", collection: ["Légumes", "Fruits", "Féculents", "Protéines", "Epicerie"]%>
       </div>
-      <div class="col-xs-12 col-sm-2">
+      <div class="col-xs-3 col-sm-2">
       <%= f.input :quantity, label: false, placeholder: "Quantité" %>
       </div>
-      <div class="col-xs-12 col-sm-1">
+      <div class="col-xs-3 col-sm-1">
       <%= f.input :unity, label: false, placeholder: "Unité" %>
       </div>
 
-    <div class="col-xs-12 col-sm-2">
-    <%= f.input :instock, label: "En stock", class: "stock_check" %>
+    <div class="col-xs-4 col-sm-2">
+      <label class="stock-checkbox">
+    <%= f.input :instock, label: "EN STOCK", class: "stock_check" %>
+    </label>
     </div>
     <%= f.hidden_field :plat_id, value: @plat.id %>
-    <div class="col-xs-12 col-sm-1">
+    <div class="col-xs-2 col-sm-1">
     <%= button_tag type: 'submit', class: "submit-buttons" do %>
         <i class="fas fa-check"></i>
     <% end %>
