--- a/app/views/ingredients/_show.html.erb
+++ b/app/views/ingredients/_show.html.erb
@@ -1,31 +1,37 @@
-<li data-ingredient-id="<%= ingredient.id %>"> <%= ingredient.name %><%= ingredient.ingredienttype %> <%= link_to menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id, id: ingredient.id) , method: :delete, remote: true do %> <i class="fas fa-times"></i> <% end %>
+<li data-ingredient-id="<%= ingredient.id %>">
 
 
 
 <div class="row add_ingredient">
   <%= simple_form_for([@plat, ingredient], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id, id: ingredient.id), method: :put, remote: true) do |f| %>
-    <div class="col-xs-12 col-sm-3">
+    <div class="col-xs-6">
     <%= f.input :name, label: false, placeholder: "Ingrédient" %>
     </div>
-    <div class="col-xs-12 col-sm-2">
-    <%= f.input :ingredienttype, label: false, placeholder: "Type d'ingrédient", collection: ["Légumes", "Fruits", "Féculents", "Protéines", "Epicerie"]%>
-    </div>
-    <div class="col-xs-12 col-sm-2">
+    <div class="col-xs-3">
     <%= f.input :quantity, label: false, placeholder: "Quantité" %>
     </div>
-    <div class="col-xs-12 col-sm-1">
+    <div class="col-xs-3">
     <%= f.input :unity, label: false, placeholder: "Unité" %>
     </div>
-    <div class="col-xs-12 col-sm-2">
+    <div class="col-xs-4">
+    <%= f.input :ingredienttype, label: false, placeholder: "Type d'ingrédient", collection: ["Légumes", "Fruits", "Féculents", "Protéines", "Epicerie"]%>
+    </div>
+
+    <div class="col-xs-4">
+      <label class="stock-checkbox">
     <%= f.input :instock, label: "En stock", class: "stock_check" %>
+    </label>
     </div>
     <%= f.hidden_field :plat_id, value: @plat.id %>
-    <div class="col-xs-12 col-sm-1">
+    <div class="col-xs-2">
     <%= button_tag type: 'submit', class: "submit-buttons" do %>
         <i class="fas fa-check"></i>
     <% end %>
     </div>
 
   <% end %>
+    <div class="col-xs-2 platsshow-delete">
+  <%= link_to menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id, id: ingredient.id) , method: :delete, remote: true do %> <i class="fas fa-times"></i> <% end %>
+</div>
 </div>
 </li>
