fix ajax issue to render ingredients list in plat show

--- a/app/views/ingredients/create.js.erb
+++ b/app/views/ingredients/create.js.erb
@@ -19,6 +19,7 @@
     <% if @ingredient.errors.present? %>
       refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @ingredient %>');
     <% else %>
+      console.log("test")
       addIngredient('<%= j render "ingredients/show", ingredient: @ingredient %>');
       refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @new_ingredient %>');
     <% end %>
