--- a/app/views/ingredients/_show.html.erb
+++ b/app/views/ingredients/_show.html.erb
@@ -1,7 +1,4 @@
-<li data-ingredient-id="<%= ingredient.id %>">
-
-
-
+<li data-ingredient-id="<%= ingredient.id %>" class="col-xs-12 col-sm-4">
 <div class="row add_ingredient">
   <%= simple_form_for([@plat, ingredient], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id, id: ingredient.id), method: :put, remote: true) do |f| %>
     <div class="col-xs-6">
@@ -32,6 +29,6 @@
   <% end %>
     <div class="col-xs-2 platsshow-delete">
   <%= link_to menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: @day.id, repa_id: @repa.id, plat_id: @plat.id, id: ingredient.id) , method: :delete, remote: true do %> <i class="fas fa-times"></i> <% end %>
-</div>
+  </div>
 </div>
 </li>
