--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -111,3 +111,23 @@
             transform: translateX(8px) translateY(-8px);
   }
 }
+
+// Button checkbox boolean in ingredients index
+
+.ingredient-instock {
+  cursor: pointer;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border: 4px solid transparent;
+  margin-bottom: 0;
+  outline: 0;
+  label {
+    font-size: 0.5em;
+    margin-left: 0;
+    text-align: center;
+    }
+}
+.ingredient-instock input[type="checkbox"] {
+  display: none;
+}
