--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,39 +1,32 @@
-<div class="container">
-  <h1>Ingredient#index</h1>
-
-  <h2>Mes ingrédients</h2>
+<div class="container navbar-space">
+  <h1>QUAND ? QUOI ? OU ?</h1>
   <% @menu.days.each do |day| %>
-  <h4><%= day.weekday %></h4>
+  <h2><%= day.weekday %></h2>
   <div class="row">
-    <% day.plats.each do |plat| %>
-      <h2><%= plat.name %></h2>
+    <% day.plats.sort{ |x,y| x.id <=> y.id }.each do |plat| %>
+
+        <% if plat.name.present? %><h3> <%= plat.name %></h3> <% end %>
     <div>
     <% plat.ingredients.each do |i| %>
-      <div class="col-xs-6 col-sm-3 ingredient-card">
+      <div class="col-xs-6 col-sm-3">
+        <div class="ingredient-card">
         <div class="edit-ingredient form-group">
           <%= simple_form_for([i.plat, i], url: menu_day_repa_plat_ingredient_path(menu_id: @menu.id, day_id: i.plat.repa.day.id, repa_id: i.plat.repa.id, plat_id: i.plat.id, id: i.id), method: :put, remote: true) do |f| %>
-            <div class="form-inline">
-              <%= f.input :instock, label: false %>
+            <div class="row">
+              <div class="col-xs-5">
               <%= f.input :name, label: false %>
-              <%= f.input :shop, label: false, collection: ["Magasin Bio", "Supermarché", "Petit commerce", "Marché", "Internet"] %>
-              <div class="button_edit_ingredient">
-                <i class="fas fa-pencil-alt"></i>
+              </div>
+              <div class="col-xs-1">
+                <label class="ingredient-instock">
+              <%= f.input :instock, label: "EN STOCK"  %>
+
+                </label>
               </div>
 
-              <div class="form_edit_ingredient">
-                <div class="row">
-                  <div class="col-xs-6">
-                    <%= f.input :ingredienttype, label: false, placeholder: "Type d'ingrédient", collection: ["Légumes", "Fruits", "Féculents", "Protéines", "Epicerie"]%>
-                  </div>
-                  <div class="col-xs-3 edit-quantity">
-                    <%= f.input :quantity, label: false, placeholder: "Quantité" %>
-                  </div>
-                  <div class="col-xs-3 edit-quantity">
-                      <%= f.input :unity, label: false, placeholder: "Unité" %>
-                  </div>
-                </div>
+              <div class="col-xs-4">
+              <%= f.input :shop, label: false, collection: ["Magasin Bio", "Supermarché", "Petit commerce", "Marché", "Internet"] %>
               </div>
-              <div class="submit-edit-button">
+              <div class="col-xs-2 submit-edit-button">
                 <%= button_tag type: 'submit', class: "submit-buttons" do %>
                 <i class="fas fa-check"></i>
                 <% end %>
@@ -42,13 +35,16 @@
           <% end %>
         </div>
 
+          <div class="list-newtodo">
         <ul id="todos-<%= i.id %>", class="list-inline">
+
         <% i.todos.each do |todo| %>
           <%= render 'todos/show', menu: @menu, todo: todo %>
         <% end %>
         </ul>
+        </div>
         <%= render 'todos/form', menu: @menu, ingredient: i, todo: @todo %>
-
+        </div>
       </div>
     <% end %>
     </div>
