--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -3,19 +3,20 @@
     <div class="create-todo">
       <%= f.hidden_field :ingredient_id, value: ingredient.id %>
       <%= f.hidden_field :menu_id, value: @menu.id %>
-      <div class="row">
-        <div class="col-xs-6">
-          <%= f.input :actionverb, collection: ["Laver", "Faire tremper", "Eplucher", "Couper", "Mixer", "Cuire", "Réchauffer", "Rotir", "Poeler", "Préparer", "Assembler"] %>
+      <div class="row form-todo">
+        <div class="col-xs-5 todo-select">
+          <%= f.input :actionverb, label:"ACTION", collection: ["Laver", "Faire tremper", "Eplucher", "Couper", "Mixer", "Cuire", "Réchauffer", "Rotir", "Poeler", "Préparer", "Assembler"] %>
         </div>
-        <div class="col-xs-5">
-          <%= f.input :daydue, collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"] %>
+        <div class="col-xs-5 todo-select">
+          <%= f.input :daydue, label: "QUAND?", collection: ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"] %>
         </div>
-      </div>
 
-      <div class="submit-todo-button">
+
+      <div class="col-xs-2 submit-todo-button">
         <%= button_tag type: 'submit', class: "submit-buttons" do %>
           <i class="fas fa-check"></i>
         <% end %>
+      </div>
       </div>
     </div>
   <% end %>
