--- a/app/assets/stylesheets/pages/_day.scss
+++ b/app/assets/stylesheets/pages/_day.scss
@@ -98,3 +98,56 @@
   padding-top: 0.5em;
   margin-bottom: 7px;
 }
+
+// DAY INDEX
+
+.finalmenu {
+  color: $dark-gray;
+
+}
+
+.plat-finalmenu {
+  border-bottom: 1px solid $dark-gray;
+  min-height: 15vh;
+  margin-bottom: 1vh;
+  div {
+    padding-left: 5px;
+    padding-right: 5px;
+    display: flex;
+    align-items: center;
+  }
+  h3 {
+    text-transform: uppercase;
+    font-weight: bold;
+    padding-left: 5px;
+    font-size: 1.5vh;
+    background-color: $dark-gray;
+    color: white;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 1vh ;
+    padding-bottom: 0.3vh;
+  }
+  .menu-plattype {
+    text-transform: uppercase;
+    font-size: 1.5vh;
+    background-color: $blue;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  .menu-platname {
+    line-height: 100%;
+    margin-left: 3px;
+    font-size: 1.5vh;
+    text-transform: uppercase;
+  }
+  .menu-platrecette {
+    .fas {
+      font-size: 1.3vh;
+    }
+    li:hover {
+      text-decoration: none;
+    }
+  }
+}
