--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -7,7 +7,7 @@
   <h2>Les derniers</h2>
   <div class="last-menus">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-6 col-md-3">
 
           <div class="lastmenu">
 
@@ -17,7 +17,7 @@
               <%= simple_form_for @menu do |f| %>
                 <div class="form_new_menu">
                   <div class="calendar_new_menu">
-                    <p class="calendar-label">SEMAINE DU :</p>
+                    <p class="calendar-label">SEMAINE</p>
                     <%= f.date_field :startdate, :id => "datepicker" %>
                   </div>
                 </div>
@@ -33,7 +33,7 @@
         </div>
 
       <% @allmenu.last(3).sort {|x,y| y <=> x }.each do |m| %>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-6 col-md-3">
 
           <div class="lastmenu", data-menu-id="<%= m.id %>">
             <%= link_to(menu_path(m.id)) do %>
