padding title dayindex

--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container navbar-space">
-<h1>Mon menu</h1>
+<h1>Menu</h1>
 <div class="">
   <% @days.each do |day| %>
     <% if day.plats.name != nil %>
