--- a/app/assets/stylesheets/pages/_day.scss
+++ b/app/assets/stylesheets/pages/_day.scss
@@ -125,11 +125,12 @@
     color: white;
     margin-top: 0;
     margin-bottom: 0;
-    padding-top: 1vh ;
-    padding-bottom: 0.3vh;
+    padding-top: 0.3vh ;
+
   }
   .menu-plattype {
     text-transform: uppercase;
+    font-weight: bold;
     font-size: 1.5vh;
     background-color: $blue;
     color: white;
