--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -131,3 +131,24 @@
 .ingredient-instock input[type="checkbox"] {
   display: none;
 }
+
+
+//button edit ingredient
+.button-editingredient {
+  background-color: $orange;
+  position: absolute;
+  text-align: center;
+  bottom: -2.3vh;
+  right: 0;
+  color: white;
+  font-size: 1.4vh;
+  padding: 0.2vh 0.4vh;
+  border-radius: 2px;
+  border: 1px solid $orange;
+  &:hover {
+    border: 1px solid $orange;
+    background-color: white;
+    color: $orange;
+  }
+}
+
