--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -5,17 +5,23 @@ body {
 
 h1 {
   color: $green;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 0vh;
 }
 
 h2 {
   text-transform: uppercase;
-  text-align: right;
   color: $dark-gray;
-  font-weight: bold;
+
+  font-size: 1.5em;
+  margin-top: 0vh;
 }
 
 h3 {
+  text-transform: uppercase;
   color: $green;
+  margin-bottom: 0.5vh;
 }
 
 p {
