--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,19 +15,19 @@
       <div class="row">
         <div class="col-xs-12 col-sm-4 home-card">
           <div class="home-card-inside">
-          <div class="home-image"><%= cl_image_tag("dinner", width: 80, height: 80) %></div>
+          <div class="home-image"><%= cl_image_tag("dinner", width: 60, height: 60) %></div>
           <div> <p> prévoir mon menu </p></div>
           </div>
         </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("grocery", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("grocery", width: 60, height: 60) %> </div>
         <div> <p> faire ma liste de courses </p></div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("to-do", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("to-do", width: 60, height: 60) %> </div>
         <div> <p> planifier les choses que je peux préparer, pour m'avancer </p></div>
         </div>
       </div>
@@ -36,19 +36,19 @@
     <div class="row">
         <div class="col-xs-12 col-sm-4 home-card">
           <div class="home-card-inside">
-          <div class="home-image"><%= cl_image_tag("clock", width: 80, height: 80) %></div>
-          <div> <p> Gagner du temps </p></div>
+          <div class="home-image"><%= cl_image_tag("clock", width: 60, height: 60) %></div>
+          <div> <p> gagner du temps </p></div>
           </div>
         </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("coins", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("coins", width: 60, height: 60) %> </div>
         <div> <p> moins gaspiller </p></div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("brain", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("brain", width: 60, height: 60) %> </div>
         <div> <p>ne plus se casser la tête tous les soirs. </p></div>
         <div class="home-accent"> <p> et surtout</p></div>
         </div>
@@ -59,25 +59,25 @@
     <div class="row">
         <div class="col-xs-12 col-sm-4 home-card">
           <div class="home-card-inside">
-          <div class="home-image"><%= cl_image_tag("dinner", width: 80, height: 80) %></div>
+          <div class="home-image"><%= cl_image_tag("dinner", width: 60, height: 60) %></div>
           <div> <p> un menu </p></div>
           </div>
         </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("grocery", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("grocery", width: 60, height: 60) %> </div>
         <div> <p> une liste de courses </p></div>
         </div>
       </div>
       <div class="col-xs-12 col-sm-4 home-card">
         <div class="home-card-inside">
-        <div class="home-image"> <%= cl_image_tag("to-do", width: 80, height: 80) %> </div>
+        <div class="home-image"> <%= cl_image_tag("to-do", width: 60, height: 60) %> </div>
         <div> <p> une to-do list </p></div>
         </div>
       </div>
     </div>
 
-    <h3>le tout réuni en un seul endroit et c'est gratuit !</h3>
+    <h3>réunies en un seul endroit !</h3>
     <div class="home-button-inscription">
     <%= link_to "Je m'inscris", new_user_registration_path , class: "home-button"  %>
     </div>
