--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,7 @@
     text-transform: uppercase;
   }
   h2 {
+    margin-top: 5px;
     color: white;
   }
   h3 {
@@ -42,7 +43,7 @@
 }
 
 .home-card {
-  height: 180px;
+  height: 20vh;
   display: flex;
   justify-content: center;
   .home-card-inside {
@@ -63,6 +64,10 @@
   p {
     color: $gray;
     text-align: center;
+    font-size: 2vh;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
   }
 }
 
