--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -79,6 +79,34 @@
   font-size: 1.5em;
 }
 
+.allmenus-list {
+  display: none;
+}
+
+.allmenus-display {
+  display: block;
+}
+
+.hiding_allmenus {
+  position: relative;
+}
+
+#button-displaymenus {
+  cursor: pointer;
+  position: absolute;
+  top: 0.5vh;
+  left: 18vh;
+  border: 1px solid $blue;
+  width: 10vh;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  color: $blue;
+  &:hover{
+    border-bottom: 3px solid $blue;
+  }
+}
  /* menu_new */
 
  .add_menu {
