--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -2,10 +2,11 @@
 
 .lastmenu {
   background-color: transparent;
-  border-top: 2px dashed $green;
-  border-bottom: 2px dashed $green;
+  border: 1px dashed $green;
+  border-top: 2px solid $green;
+  border-bottom: 2px solid $green;
   margin-bottom: 15px;
-  padding: 1em;
+  padding: 0.5em;
   width: 100%;
   height: 100%;
   position: relative;
