--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -154,8 +154,8 @@
 .display_repa {
   color: $dark-gray;
   font-size: 0.9em;
-  padding-top: 5px;
-
+  padding-top: 0px;
+  border: 1px solid $blue;
   text-align: center;
   padding-left: 0;
   padding-right: 0;
@@ -163,7 +163,7 @@
     font-weight: bold;
     background-color: $blue;
     padding-top: 0;
-    margin-top: 1vh;
+    width: 100%;
     color: white;
     line-height: 1.3;
     margin-left: 0;
@@ -197,7 +197,6 @@
     margin-right: 0;
     margin-left: 0;
     padding-bottom: 10px;
-    border: 1px solid $dark-gray;
     margin-bottom: 5px;
 
   }
@@ -219,7 +218,15 @@
 .links-menushow {
   display: flex;
   justify-content: space-around;
-  margin-top: 3vh;
+  margin-top: 4vh;
+  .link-menu1 p {
+    text-align: right;
+    line-height: 0.8;
+    padding-bottom: 2px;
+  }
+  a {
+    color: white;
+  }
   .home-button-inscription {
     margin-left: 5%;
   }
