--- a/app/views/ingredients/_formsimple.html.erb
+++ b/app/views/ingredients/_formsimple.html.erb
@@ -1,5 +1,5 @@
 <div class="row add_ingredient">
-  <%= simple_form_for([menu, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: menu.id, day_id: day.id, repa_id: repa.id, plat_id: plat.id), method: :post, remote: true) do |f| %>
+  <%= simple_form_for([menu, @ingredient], url: menu_day_repa_plat_ingredients_path(menu_id: menu.id, day_id: day.id, repa_id: repa.id, plat_id: plat.id), method: :post, remote: true, autocomplete: 'off') do |f| %>
     <div class="col-xs-6">
     <%= f.input :name, label: false, placeholder: "Ingrédient" %>
     </div>
