--- a/app/views/ingredients/create.js.erb
+++ b/app/views/ingredients/create.js.erb
@@ -1,6 +1,9 @@
   function refreshForm(innerHTML) {
     const newIngredientForm = document.getElementById('new_ingredient');
     newIngredientForm.innerHTML = innerHTML;
+    document.querySelectorAll('input#ingredient_name').forEach((ingredient) => {
+      ingredient.value = "";
+    });
   }
 
   function addIngredient(ingredientHTML) {
@@ -19,7 +22,6 @@
     <% if @ingredient.errors.present? %>
       refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @ingredient %>');
     <% else %>
-      console.log("test")
       addIngredient('<%= j render "ingredients/show", ingredient: @ingredient %>');
       refreshForm('<%= j render "ingredients/form", menu: @menu, day: @day, repa: @repa, plat: @plat, ingredient: @new_ingredient %>');
     <% end %>
