--- a/app/assets/stylesheets/pages/_ingredient.scss
+++ b/app/assets/stylesheets/pages/_ingredient.scss
@@ -1,8 +1,35 @@
+.ingredients-index {
+  h1 {
+    font-size: 2em;
+    margin-bottom: 0.6em;
+  }
+  h2 {
+    margin-top: 0.6em;
+  }
+  h3 {
+    margin-top: 0.3em;
+    font-size: 1.3em;
+    padding-left: 1vh;
+  }
+  .ingindex-sort {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .ingindex-plat .col-xs-6 {
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+}
+
 .ingredient-card {
   border: 1px solid $green;
   padding-top: 5px;
   margin-bottom: 10px;
   color: $dark-gray;
+  .col-xs-4 {
+    padding-right: 15px;
+    padding-left: 0;
+  }
 }
 
 .form_edit_ingredient {
@@ -16,34 +43,36 @@
   .ingredient_name, #ingredient_name {
     width: 100%;
   }
-  .button_edit_ingredient {
+
+  .submit-edit-button {
   position: absolute;
   top: 0.3em;
-  right: 3em;
+  right: -0.3em;
   }
-  .submit-edit-button {
-    position: absolute;
-  top: 0.3em;
-  right: 0.5em;
-  }
-    .ingredient_quantity, #ingredient_quantity, .ingredient_unity, #ingredient_unity {
+  .ingredient_quantity, #ingredient_quantity, .ingredient_unity, #ingredient_unity {
     width: 100%;
-  }
-  .edit-quantity {
-    padding-left: 3px;
-    padding-right: 0px;
   }
   input, select {
     padding-left: 0px;
     padding-right: 0px;
-    margin-left: 3px;
-    font-size: 0.9em;
+    font-size: 0.8em;
     border: none;
     border-bottom: 1px solid $green;
-    text-align: center;
+    text-align: left;
+  }
+  select {
+
   }
   .fas {
     margin-left: 3px;
+  }
+  .stocking {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .col-xs-5 {
+    padding-left: 20px;
+    padding-right: 8px;
   }
 }
 
@@ -56,14 +85,22 @@
   margin-left: 0;
   margin-right: 0;
   background-color: $blue;
+  .col-xs-2 {
+    padding-left: 0;
+    padding-right: 0;
+  }
   label {
     color: white;
     margin-bottom: 0;
+    font-size: 0.8em;
+    padding-left: 3px;
+    width: 100%;
+    border: none;
   }
   select {
     padding-left: 0px;
     padding-right: 0px;
-    margin-left: 3px;
+    margin-left: 2px;
     font-size: 0.9em;
     border: none;
     border-bottom: 1px solid $green;
@@ -76,11 +113,60 @@
 }
 
 .list-newtodo {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  ul {
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 0;
+    width: 100%;
+  }
+
   li {
-    font-size: 0.9em;
+    font-size: 0.8em;
+    position: relative;
+    padding-left: 0;
+    padding-right: 3px;
+  }
+  a {
+    font-size: 0.5em;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+  .dayduelist {
+    color: $dark-gray;
+    font-size: 0.8em;
   }
 }
+
+
+// JS ingredient in stock
+.stock-checkbox-ingindex {
+  cursor: pointer;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  width: 30px;
+  border: none;
+  padding-top: 5px;
+  label {
+    height: 100%;
+    text-decoration: line-through;
+    font-size: 0.6em;
+  }
+}
+
+.stock-checkbox-ingindex input[type="checkbox"] {
+  display: none;
+}
+
+.checkbox-boolean-ingindex {
+  label {
+    text-decoration: none;
+    color: $green;
+  }
+}
+
