--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -14,7 +14,7 @@
 
       <div class="col-xs-2 submit-todo-button">
         <%= button_tag type: 'submit', class: "submit-buttons" do %>
-          <i class="fas fa-check"></i>
+          <i class="fas fa-plus"></i>
         <% end %>
       </div>
       </div>
