--- a/app/views/repas/index.html.erb
+++ b/app/views/repas/index.html.erb
@@ -1,60 +1,60 @@
 <div class="container navbar-space">
-<h1>Repas#index</h1>
+<h1>Ma liste de course</h1>
 
-<h3>Ma liste de courseee</h3>
-<h4>Magasin Bio</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == "Magasin Bio" %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shopnone.present? %>
+  <h2>global</h2>
+  <ul class="list-inline">
+    <% @shopnone.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
 
-<h4>Marché</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == "Marché" %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shopmagbio.present? %>
+  <h2>Magasin Bio</h2>
+  <ul class="list-inline">
+    <% @shopmagbio.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
 
-<h4>Petit commerce</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == "Petit commerce" %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shopmarché.present? %>
+  <h2>Marché</h2>
+  <ul class="list-inline">
+    <% @shopmarché.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
 
-<h4>Supermarché</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == "Supermarché" %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shoppetitcomm.present? %>
+  <h2>Petit commerce</h2>
+  <ul class="list-inline">
+    <% @shoppetitcomm.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
 
-<h4>Internet</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == "Internet" %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shopsuperm.present? %>
+  <h2>Supermarché</h2>
+  <ul class="list-inline">
+    <% @shopsuperm.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
 
-<h4>Autre</h4>
-<ul class="list-inline">
-  <% @ingredients.each do |ingredient|  %>
-    <% if ingredient.shop == nil %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
-    <%end %>
-  <% end %>
-</ul>
+<% if @shopinternet.present? %>
+  <h2>Internet</h2>
+  <ul class="list-inline">
+    <% @shopinternet.each do |ingredient|  %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+    <% end %>
+  </ul>
+  <%end %>
+
 
 
 <div class="links-menu ingredients-index-links">
