--- a/app/views/repas/index.html.erb
+++ b/app/views/repas/index.html.erb
@@ -1,20 +1,32 @@
 <div class="container navbar-space">
 <h1>Ma liste de course</h1>
 
+<div class="row todo-minheight">
+
 <% if @shopnone.present? %>
-  <h2>global</h2>
+  <div class="col-xs-12 col-sm-4">
   <ul class="list-inline">
     <% @shopnone.each do |ingredient|  %>
+        <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
+  </div>
   <%end %>
 
+<div class="col-xs-12 col-sm-4">
 <% if @shopmagbio.present? %>
   <h2>Magasin Bio</h2>
   <ul class="list-inline">
     <% @shopmagbio.each do |ingredient|  %>
+      <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -23,16 +35,26 @@
   <h2>Marché</h2>
   <ul class="list-inline">
     <% @shopmarché.each do |ingredient|  %>
+        <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
+</div>
 
+<div class="col-xs-12 col-sm-4">
 <% if @shoppetitcomm.present? %>
   <h2>Petit commerce</h2>
   <ul class="list-inline">
     <% @shoppetitcomm.each do |ingredient|  %>
+        <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -41,7 +63,11 @@
   <h2>Supermarché</h2>
   <ul class="list-inline">
     <% @shopsuperm.each do |ingredient|  %>
+        <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -50,12 +76,17 @@
   <h2>Internet</h2>
   <ul class="list-inline">
     <% @shopinternet.each do |ingredient|  %>
+        <% if ingredient.instock != true %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% else %>
+      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
+</div>
 
-
+</div>
 
 <div class="links-menu ingredients-index-links">
             <%= link_to menu_path(@menu) do  %>
