--- a/app/assets/stylesheets/pages/_todo.scss
+++ b/app/assets/stylesheets/pages/_todo.scss
@@ -2,6 +2,11 @@
   h1 {
     margin-bottom: 0.5em;
   }
+  h2 {
+    background-color: $blue;
+    color: white;
+    font-weight: bold;
+  }
 }
 
 .todo-minheight {
