--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -30,7 +30,7 @@
 </div>
 
   <div class="links-menu ingredients-index-links">
-            <%= link_to menu_path(@menu) do  %>
+            <%= link_to menu_ingredients_path(@menu) do  %>
             <div class="link-menu1">
               <i class="fas fa-arrow-left"></i>
               <p>RETOUR</p>
